@@ -59,7 +59,7 @@
 	<LI><P STYLE="margin-bottom: 0in">Members of the GNOME
 	Foundation as of November 8, 2001 are eligible to vote in the
 	election.  Anyone who has made a contribution to GNOME can
-	apply for membership by completing the <a href="http://foundation.gnome.org/membership-form.html">application</a>.
+	apply for membership by completing the <a href="http://foundation.gnome.org/membership-form.php">application</a>.
 	</P>
 
 	<LI><P STYLE="margin-bottom: 0in">Any eligible voter is
