@@ -121,7 +121,7 @@
    A new <a href="membership-policy.html">membership qualification 
    policy</a> has been adopted and the GNOME Foundation Membership 
    has been re-opened to new members.  If you would like to become 
-   a member, please <a href="membership-form.html">apply here</a>.  
+   a member, please <a href="membership-form.php">apply here</a>.  
   </blockquote>
  </li>
  <li>
