@@ -31,7 +31,7 @@
       <center>
        <a href="membership.html">Membership Information</a> :&nbsp;
        Membership Policy :&nbsp;
-       <a href="membership-form.html">Membership Application</a>
+       <a href="membership-form.php">Membership Application</a>
       </center>
      </td>
     </tr>
@@ -70,8 +70,8 @@
 
   <p>
    To apply for membership, please complete the form available at <a
-   href="http://foundation.gnome.org/membership-form.html">
-   http://foundation.gnome.org/membership-form.html</a>.
+   href="http://foundation.gnome.org/membership-form.php">
+   http://foundation.gnome.org/membership-form.php</a>.
    Please note that applications for membership must include sufficient
    information to allow the Membership Committee to verify the
    applicants' eligibility; applications which include inaccurate or
