@@ -31,7 +31,7 @@
       <center>
        Membership Information :&nbsp;
        <a href="membership-policy.html">Membership Policy</a> :&nbsp;
-       <a href="membership-form.html">Membership Application</a>
+       <a href="membership-form.php">Membership Application</a>
       </center>
      </td>
     </tr>
@@ -50,7 +50,7 @@
         process.  Members can run for election to the Board of Directors,
         vote in the elections for the Board of Directors, and suggest 
         referenda.  If you are a GNOME contributor and would like to become
-        a member of the Foundation, <a href="membership-form.html">apply
+        a member of the Foundation, <a href="membership-form.php">apply
         here</a>.  If you aren't sure if you qualify, read the
         <a href="membership-policy.html">Membership Policy</a>. You 
         can also browse the <a href="membership-list.html">current membership
@@ -66,7 +66,7 @@
            <a href="membership-policy.html">Membership Policy</a>
           </li>
           <li>
-           <a href="membership-form.html">Membership Application</a>
+           <a href="membership-form.php">Membership Application</a>
           </li>
           <li>
            <a href="membership-list.html">Membership List from Fall 2000</a>
